Update fair & lovely(4).html

--- a/fair & lovely(4).html
+++ b/fair & lovely(4).html
@@ -242,3 +242,4 @@
      <input type="hidden" id="transition_type" value="1"> 
      <input type="hidden" id="pause_play_type" value="1"> 
     </section> 
+    <a href="South university.html"><h1>South university</h1></a>
