--- a/index(01).html
+++ b/index(01).html
@@ -172,7 +172,7 @@
 
        <div class="gra">
 
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKC0HuaShdA8vgOWXc7lbRIP2zbkYKFVgN0aFUoHU_EsxJvn845_9zJAEy" alt="">
+        <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/otp.png" alt="">
 
         <span>এডমিট কার্ড</span>
 
