--- a/index(01).html
+++ b/index(01).html
@@ -209,7 +209,7 @@
 
        <div class="gra">
 
-        <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/student_management.png" alt="">
+        <img src="https://kmrasel.github.io/newexprience/Km%20Rasel.jpg" alt="">
 
         <span>প্রোফাইল</span>
 
