--- a/index(01).html
+++ b/index(01).html
@@ -187,7 +187,7 @@
 
        <div class="gra">
 
-        <img src="https://github.com/kmrasel9748/newexprience2/tree/gh-pages" alt="">
+        <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/1348319696_chart_bar.png" alt="">
 
         <span>উপস্থিতি</span>
 
