--- a/index(01).html
+++ b/index(01).html
@@ -72,7 +72,7 @@
        </div></a> 
       <a href="//student.jessoreboard.gov.bd" class="service">
        <div class="gra">
-        <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/student_management.png" alt="">
+        <img src="http://www.java2s.com/Code/HTMLCSSDemo/photography-images/hdr_bg.jpg" alt="">
         <span>My photography</span>
        </div></a> 
       <a href="//jessoreboard.gov.bd/epd_online" class="service">
