--- a/index(01).html
+++ b/index(01).html
@@ -92,7 +92,7 @@
        </div></a> 
       <a href="//institute.jessoreboard.gov.bd" class="service">
        <div class="gra">
-        <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/oemscp_button.png" alt="">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtVQoSa7-ucql4J1QlAe3uvrAjbEVwyYOrZfK5sNn8sJEZ45xm6QYW1RSK" alt="">
         <span>Poems</span>
        </div></a> 
       <a href="" class="service">
