--- a/index(01).html
+++ b/index(01).html
@@ -82,7 +82,7 @@
        </div></a> 
       <a href="//otp.jessoreboard.gov.bd" class="service">
        <div class="gra">
-        <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/otp.png" alt="">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_JekHpofLPzCeXOZHZoUSa_yr9ebXeb6EcG1zg_x-uDS69OhwKNjQNzA" alt="">
         <span>Journey</span>
        </div></a> 
       <a href="" class="service">
