--- a/index(01).html
+++ b/index(01).html
@@ -107,9 +107,9 @@
 
        <div class="gra">
 
-        <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/oemscp_button.png" alt="">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRB4l5qtOQc_ewvoda5p3CMJvwDPS-kip9L8fGn0iC_6DYtOo0hg27tErQ" alt="">
 
-        <span>Pk</span>
+        <span>Facebook</span>
 
        </div></a>
       
@@ -119,7 +119,7 @@
 
         <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/oemscp_button.png" alt="">
 
-        <span>PR</span>
+        <span>Youtube</span>
 
        </div></a>
       
