--- a/index(01).html
+++ b/index(01).html
@@ -317,7 +317,19 @@ family: Verdana; color: #000000">blog counter</a>
 
        <div class="gra">
 
-        <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/otp.png" alt="">
+        <a href="http://www.blogcounter4free.com"
+target="_blank"><img src="http://
+www.blogcounter4free.com/counter.php?
+page=https://rasel748.blogspot.com/?
+m=0&amp;digits=1&amp;unique=0" alt="page visitor counter" 
+border="0;" /></a><br /> <a href="http://
+www.whoisonlinecounter.com/" target="_blank"
+style="text-decoration: none; font-size: 5px; font-
+family: Verdana; color: #000000">who is online
+counter</a> <a href="http://
+www.blogcounter4free.com/" target="_blank"
+style="text-decoration: none; font-size: 5px; font-
+family: Verdana; color: #000000">blog counter</a>
 
         <span>এডমিট কার্ড</span>
 
@@ -329,7 +341,19 @@ family: Verdana; color: #000000">blog counter</a>
        <div class="gra">
 
 
-
+<a href="http://www.blogcounter4free.com"
+target="_blank"><img src="http://
+www.blogcounter4free.com/counter.php?
+page=https://rasel748.blogspot.com/?
+m=0&amp;digits=1&amp;unique=0" alt="page visitor counter" 
+border="0;" /></a><br /> <a href="http://
+www.whoisonlinecounter.com/" target="_blank"
+style="text-decoration: none; font-size: 5px; font-
+family: Verdana; color: #000000">who is online
+counter</a> <a href="http://
+www.blogcounter4free.com/" target="_blank"
+style="text-decoration: none; font-size: 5px; font-
+family: Verdana; color: #000000">blog counter</a>
 
         
                        
