--- a/index(01).html
+++ b/index(01).html
@@ -232,13 +232,13 @@
    </ol> 
    <div class="carousel-inner"> 
     <div class="carousel-item active"> 
-     <img class="d-block w-100" src="Km Rasel.jpg" alt="First slide"> 
+     <img class="d-block w-100" src="https://kmrasel.github.io/newexprience/Km%20Rasel.jpg" alt="First slide"> 
     </div> 
     <div class="carousel-item"> 
-     <img class="d-block w-100" src="12.jpg" alt="Second slide"> 
+     <img class="d-block w-100" src="https://kmrasel.github.io/newexprience/Km%20Rasel.jpg" alt="Second slide"> 
     </div> 
     <div class="carousel-item"> 
-     <img class="d-block w-100" src="14.jpg" alt="Third slide"> 
+     <img class="d-block w-100" src="https://kmrasel.github.io/newexprience/Km%20Rasel.jpg" alt="Third slide"> 
     </div> 
    </div> 
    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> 
