--- a/index(01).html
+++ b/index(01).html
@@ -136,6 +136,12 @@
        <span>ওয়েব মেরামতের কাজ চলছে। সাময়িক অসুবিধার জন্য আমরা আন্তরিকভাবে দুঃখিত। </span> 
       </marquee> 
      </div> 
+                                                                                                                                         
+         <div class="news"> 
+   <a href="#news_290718_1" rel="facebox"> <img src="https://kmrasel.github.io/newexprience/Welcome.gif" width="300px" height="250px"> </a> SSC (Dakhil) Tofail Uddin Smriti Dakhil Madrasha Morrelgonj, Bagerhat. I spent eight months in the madrasha in the year 2007-2015 (education year). Here are a few small ballet memories. 
+   <span class="date"> </span> 
+  </div>                                                                                                                                 
+                                                                                                                                         
      <div class="home-menu-section"> 
       <a href="" class="home-menu">
        <div class="gra">
