--- a/index(01).html
+++ b/index(01).html
@@ -138,7 +138,7 @@
      </div> 
                                                                                                                                          
          <div class="news"> 
-   <a href="#news_290718_1" rel="facebox"> <img src="https://kmrasel.github.io/newexprience/Welcome.gif" width="650px" height="200px"> </a> SSC (Dakhil) Tofail Uddin Smriti Dakhil Madrasha Morrelgonj, Bagerhat. I spent eight months in the madrasha in the year 2007-2015 (education year). Here are a few small ballet memories. 
+   <a href="#news_290718_1" rel="facebox"> <img src="https://kmrasel.github.io/newexprience/Welcome.gif" width="620px" height="200px"> </a>
    <span class="date"> </span> 
   </div>                                                                                                                                 
                                                                                                                                          
