--- a/index(01).html
+++ b/index(01).html
@@ -48,7 +48,7 @@
    </section> 
    <section class="menu-section"> 
     <ul class="menu"> 
-     <li><a href="">প্রথম পাতা</a></li> 
+     <li><a href="https://kmrasel9748.github.io/newexprience2/index(01)">প্রথম পাতা</a></li> 
      <li><a href="My information.html">সম্পর্কে</a></li> 
      <li><a href="#">পার্সোনাল বায়োডাটা</a></li> 
      <li><a href="#">শিক্ষাগত রেকর্ড</a></li> 
