--- a/index(01).html
+++ b/index(01).html
@@ -52,7 +52,7 @@
      <li><a href="My information.html">সম্পর্কে</a></li> 
      <li><a href="#">পার্সোনাল বায়োডাটা</a></li> 
      <li><a href="">শিক্ষাগত রেকর্ড</a></li> 
-     <li><a href="#">ফলাফল</a></li> 
+     <li><a href="">ফলাফল</a></li> 
      <li><a href="#">ফটো</a></li> 
      <li><a href="">যোগাযোগ</a> </li> 
     </ul> 
