--- a/My information.html
+++ b/My information.html
@@ -1,7 +1,7 @@
 
      <h1 style="color:red">My information</h1> 
      <div id="My information" class="container"> 
-      <img src="Rassel Kh.jpg" alt="W3Schools.com" width="530" height="450"> 
+      <img src="km rasel.jpg" alt="W3Schools.com" width="800" height="600"> 
       <div style="background-color:#8b008b; color:white; padding:60px;"> 
        <p class="text"></p>
        <ul> 
