--- a/index(01).html
+++ b/index(01).html
@@ -95,7 +95,7 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtVQoSa7-ucql4J1QlAe3uvrAjbEVwyYOrZfK5sNn8sJEZ45xm6QYW1RSK" alt="">
         <span>Poems</span>
        </div></a> 
-      <a href="" class="service">
+      <a href="http://dik-grantha.com" class="service">
        <div class="gra">
         <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/library.png" alt="">
         <span>Digital Library</span>
