--- a/My information.html
+++ b/My information.html
@@ -4,8 +4,7 @@
       <img src="km rasel.jpg" alt="W3Schools.com" width="964" height="680"> 
       <div style="background-color:#8b008b; color:white; padding:60px;"> 
        <p class="text"></p>
-       <ul> 
-        <strong><i> <li>Name:K,M.RaseL</li> <li>Father's Name:Ali Hossain Khan</li> <li>Village:Godthera</li> <li>Post:Fokir bary</li> <li>Upzilla:Morrelgonj</li> <li>District:Bagerhat</li> <li>Division:Khulna</li> <li>Country:Bangladesh</li> <li>Email:-kmrasel5656@gmail.com</li> <li>Work:Student</li> </i></strong> 
+       <ul><strong><I>আমি নিজেকে অতি সাধারন একটা মানুষ বলে মনে করছি। সর্বদা একাকিত্বতা অবলম্বন করে চলি। সমাজের যত হয়রানী,রাহাজানি, আড্ডাবাজি এড়িয়ে চলি। আমি আমার নিজের পথ একাই চলতে ভালোবাসি। বন্ধুদের সাথে দুষ্টুমি সহ সব ধরনের অস্থিরতা এডিয়ে চলি। আমি আমার মতাদর্শে বিশ্বাসি। নিজের গতিতে আমি প্রতিটা স্টেপ বাই স্টেপ চলি। কিছুনা ভিন্নতা বজায় রাখার চেষ্টা করি। সমাজের লোক নিন্দা সহ বিভিন্ন কলঙ্ক জনিত কর্মকান্ডের ধরা ছোয়ার বাহিরে থাকি। সম্পর্কের ক্ষেত্রে আমি পরিবারের মতাদর্শে বিশ্বাসী। প্রতিটা ধাপ আমি অতিক্রম করি নিজস্ব গতিতে নিজস্ব চিন্তাধারায়। মানুষটা দারিদ্র হলেও আমার সর্বদিকের চিন্তাধারা ভিন্নতা বজায় রেখে চলি। আমার কিছু লক্ষ রয়েছে যেমনি সকলের থাকে। এটাই আমার জীবনের ছোট্ট একটা গল্পের স্ক্রিপ। </i></strong> 
        </ul>
        <p></p> 
        <a href="https://mbasic.facebook.com/md.raselkhan.5439?ref_component=mbasic_home_header&amp;ref_page=%2Fwap%2Fhome.php&amp;refid=7" class="btn btn-primary">See more</a> 
