--- a/Hsc.html
+++ b/Hsc.html
@@ -13,18 +13,18 @@
       <table width="650" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF"> 
        <tbody>
         <tr> 
-         <td width="12" align="left" valign="top" background="images/back_cor_left_top.gif"><img src="images/trans.gif" width="12" height="12"></td> 
-         <td valign="top" background="images/back_top.gif"><img src="images/trans.gif" width="12" height="12"></td> 
-         <td width="12" align="right" valign="top" background="images/back_cor_right_top.gif"><img src="images/trans.gif" width="12" height="12"></td> 
+         <td width="12" align="left" valign="top" background="https://www.educationboard.gov.bd/images/back_cor_left_top.gif"><img src="images/trans.gif" width="12" height="12"></td> 
+         <td valign="top" background="images/back_top.gif"><img src="https://www.educationboard.gov.bd/images/trans.gif" width="12" height="12"></td> 
+         <td width="12" align="right" valign="top" background="images/back_cor_right_top.gif"><img src="https://www.jessoreboard.gov.bd/images/trans.gif" width="12" height="12"></td> 
         </tr> 
         <tr> 
-         <td align="left" valign="top" background="images/back_left.gif">&nbsp;</td> 
+         <td align="left" valign="top" background="https://www.educationboard.gov.bd/images/back_left.gif">&nbsp;</td> 
          <td valign="top">
           <table width="100%" border="0" cellspacing="0" cellpadding="0"> 
            <tbody>
             <tr> 
-             <td width="142" height="121" align="center" valign="middle" bgcolor="#EEEEEE" class="left_round"><img src="images/bd_logo.png" width="82" height="82"></td> 
-             <td width="2"><img src="images/trans.gif" width="2" height="1"></td> 
+             <td width="142" height="121" align="center" valign="middle" bgcolor="#EEEEEE" class="left_round"><img src="https://www.jessoreboard.gov.bd/images/bd_logo.png" width="82" height="82"></td> 
+             <td width="2"><img src="https://www.educationboard.gov.bd/images/trans.gif" width="2" height="1"></td> 
              <td valign="top" bgcolor="#007814">
               <table width="100%" border="0" cellspacing="0" cellpadding="0"> 
                <tbody>
@@ -34,13 +34,13 @@
                    <tbody>
                     <tr> 
                      <td align="left" valign="bottom"><h1 id="site_title_des">Ministry of Education</h1></td> 
-                     <td align="right" valign="top"><img src="images/banner_flag.jpg" width="220" height="41" hspace="0" vspace="0" border="0"></td> 
+                     <td align="right" valign="top"><img src="https://www.educationboard.gov.bd/images/banner_flag.jpg" width="220" height="41" hspace="0" vspace="0" border="0"></td> 
                     </tr> 
                    </tbody>
                   </table></td> 
                 </tr> 
                 <tr> 
-                 <td align="left" bgcolor="#479e55"><img src="images/trans.gif" width="1" height="1"></td> 
+                 <td align="left" bgcolor="#479e55"><img src="https://www.educationboard.gov.bd/images/trans.gif" width="1" height="1"></td> 
                 </tr> 
                 <tr> 
                  <td height="55" align="left"><h1 id="site_title"> Intermediate and Secondary Education Boards Bangladesh</h1></td> 
@@ -51,7 +51,7 @@
                   </table></td> 
                 </tr> 
                 <tr> 
-                 <td align="right" bgcolor="#FFFFFF"><img src="images/trans.gif" width="1" height="1"></td> 
+                 <td align="right" bgcolor="#FFFFFF"><img src="https://www.educationboard.gov.bd/images/trans.gif" width="1" height="1"></td> 
                 </tr> 
                 <tr> 
                  <td height="23" align="right" bgcolor="#86C775" class="bar_bk"><a href="http://www.educationboard.gov.bd" class="links02">Official Website of Education Board</a>&nbsp;</td> 
@@ -61,7 +61,7 @@
             </tr> 
            </tbody>
           </table> <img src="images/trans.gif" width="1" height="1"></td> 
-         <td align="right" valign="top" background="images/back_right.gif">&nbsp;</td> 
+         <td align="right" valign="top" background="https://www.educationboard.gov.bd/images/back_right.gif">&nbsp;</td> 
         </tr> 
        </tbody>
       </table></td> 
@@ -71,7 +71,7 @@
       <table width="650" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF"> 
        <tbody>
         <tr> 
-         <td width="12" align="left" valign="top" background="images/back_left.gif">&nbsp;</td> 
+         <td width="12" align="left" valign="top" background="https://www.educationboard.gov.bd/images/back_left.gif">&nbsp;</td> 
          <td valign="top"> 
           <table width="100%" border="0" cellspacing="0" cellpadding="0"> 
            <tbody>
@@ -184,29 +184,29 @@
               <table width="626" border="0" cellspacing="0" cellpadding="0"> 
                <tbody>
                 <tr bgcolor="#86c775"> 
-                 <td colspan="5"><img src="images/trans.gif" width="1" height="5"></td> 
+                 <td colspan="5"><img src="https://www.educationboard.gov.bd/images/trans.gif" width="1" height="5"></td> 
                 </tr> 
                 <tr> 
-                 <td colspan="5"><img src="images/trans.gif" width="1" height="1"></td> 
+                 <td colspan="5"><img src="https://www.educationboard.gov.bd/images/trans.gif" width="1" height="1"></td> 
                 </tr> 
                 <tr> 
                  <td width="5" align="left" valign="bottom" bgcolor="#F2F2F2" class="footer_text"><img src="images/footer_corner_left.gif" width="5" height="5"></td> 
                  <td width="356" height="70" align="left" valign="middle" bgcolor="#F2F2F2" class="footer_text">©2005-2018 Ministry of Education, All rights reserved.</td> 
-                 <td width="150" height="70" align="right" valign="middle" bgcolor="#F2F2F2" class="footer_text">Powered by<img src="images/footer_corner_right.gif" width="5" height="5"></td> 
+                 <td width="150" height="70" align="right" valign="middle" bgcolor="#F2F2F2" class="footer_text">Powered by<img src="https://www.educationboard.gov.bd/images/footer_corner_right.gif" width="5" height="5"></td> 
                  <td width="110" height="70" align="center" valign="middle" bgcolor="#F2F2F2"><img src="images/tbl_logo.png" width="83" height="44"></td> 
-                 <td width="5" align="left" valign="bottom" bgcolor="#F2F2F2" class="footer_text"><img src="images/footer_corner_right.gif" width="5" height="5"></td> 
+                 <td width="5" align="left" valign="bottom" bgcolor="#F2F2F2" class="footer_text"><img src="https://www.educationboard.gov.bd/images/footer_corner_right.gif" width="5" height="5"></td> 
                 </tr> 
                </tbody>
               </table></td> 
             </tr> 
            </tbody>
           </table></td> 
-         <td width="12" align="right" valign="top" background="images/back_right.gif">&nbsp;</td> 
+         <td width="12" align="right" valign="top" background="https://www.educationboard.gov.bd/images/back_right.gif">&nbsp;</td> 
         </tr> 
         <tr> 
-         <td align="left" valign="top" background="images/back_cor_left_bot.gif"><img src="images/trans.gif" width="12" height="12"></td> 
-         <td valign="top" background="images/back_bot.gif"><img src="images/trans.gif" width="12" height="12"></td> 
-         <td align="right" valign="top" background="images/back_cor_right_bot.gif"><img src="images/trans.gif" width="12" height="12"></td> 
+         <td align="left" valign="top" background="https://www.educationboard.gov.bd/images/back_cor_left_bot.gif"><img src="https://www.educationboard.gov.bd/images/trans.gif" width="12" height="12"></td> 
+         <td valign="top" background="https://www.educationboard.gov.bd/images/back_bot.gif"><img src="https://www.educationboard.gov.bd/images/trans.gif" width="12" height="12"></td> 
+         <td align="right" valign="top" background="images/back_cor_right_bot.gif"><img src="https://www.educationboard.gov.bd/images/trans.gif" width="12" height="12"></td> 
         </tr> 
        </tbody>
       </table></td> 
