--- a/Hsc.html
+++ b/Hsc.html
@@ -34,7 +34,7 @@
                    <tbody>
                     <tr> 
                      <td align="left" valign="bottom"><h1 id="site_title_des">Ministry of Education</h1></td> 
-                     <td align="right" valign="top"><img src="https://www.educationboard.gov.bd/images/banner_flag.jpg" width="220" height="41" hspace="0" vspace="0" border="0"></td> 
+                     <td align="right" valign="top"><img src="http://www.educationboardresults.gov.bd/images/banner_flag.jpg" width="220" height="41" hspace="0" vspace="0" border="0"></td> 
                     </tr> 
                    </tbody>
                   </table></td> 
