--- a/Hsc.html
+++ b/Hsc.html
@@ -23,7 +23,7 @@
           <table width="100%" border="0" cellspacing="0" cellpadding="0"> 
            <tbody>
             <tr> 
-             <td width="142" height="121" align="center" valign="middle" bgcolor="#EEEEEE" class="left_round"><img src="http://www.educationboardresults.gov.bd/images/bd_logo.png" width="82" height="82"></td> 
+             <td width="142" height="121" align="center" valign="middle" bgcolor="#EEEEEE" class="left_round"><img src="http://www.educationboardresults.gov.bd/images/bd_logo.png" width="90" height="82"></td> 
              <td width="2"><img src="https://www.educationboard.gov.bd/images/trans.gif" width="2" height="1"></td> 
              <td valign="top" bgcolor="#007814">
               <table width="100%" border="0" cellspacing="0" cellpadding="0"> 
@@ -193,7 +193,7 @@
                  <td width="5" align="left" valign="bottom" bgcolor="#F2F2F2" class="footer_text"><img src="images/footer_corner_left.gif" width="5" height="5"></td> 
                  <td width="356" height="70" align="left" valign="middle" bgcolor="#F2F2F2" class="footer_text">©2005-2018 Ministry of Education, All rights reserved.</td> 
                  <td width="150" height="70" align="right" valign="middle" bgcolor="#F2F2F2" class="footer_text">Powered by<img src="https://www.educationboard.gov.bd/images/footer_corner_right.gif" width="5" height="5"></td> 
-                 <td width="110" height="70" align="center" valign="middle" bgcolor="#F2F2F2"><img src="images/tbl_logo.png" width="83" height="44"></td> 
+                 <td width="110" height="70" align="center" valign="middle" bgcolor="#F2F2F2"><img src="http://www.educationboardresults.gov.bd/images/tbl_logo.png" width="83" height="44"></td> 
                  <td width="5" align="left" valign="bottom" bgcolor="#F2F2F2" class="footer_text"><img src="https://www.educationboard.gov.bd/images/footer_corner_right.gif" width="5" height="5"></td> 
                 </tr> 
                </tbody>
