--- a/Ssc.html
+++ b/Ssc.html
@@ -23,7 +23,7 @@
           <table width="100%" border="0" cellspacing="0" cellpadding="0"> 
            <tbody>
             <tr> 
-             <td width="142" height="121" align="center" valign="middle" bgcolor="#EEEEEE" class="left_round"><img src="www.educationboardresults.gov.bd/images/bd_logo.png" width="82" height="82"></td> 
+             <td width="142" height="121" align="center" valign="middle" bgcolor="#EEEEEE" class="left_round"><img src="http://www.educationboardresults.gov.bd/images/bd_logo.png" width="94" height="94"></td> 
              <td width="2"><img src="images/trans.gif" width="2" height="1"></td> 
              <td valign="top" bgcolor="#007814">
               <table width="100%" border="0" cellspacing="0" cellpadding="0"> 
