--- a/Ssc.html
+++ b/Ssc.html
@@ -34,7 +34,7 @@
                    <tbody>
                     <tr> 
                      <td align="left" valign="bottom"><h2 id="site_title_des">Ministry of Education</h2></td> 
-                     <td align="right" valign="top"><img src="www.educationboardresults.gov.bd/images/banner_flag.jpg" width="220" height="41" hspace="0" vspace="0" border="0"></td> 
+                     <td align="right" valign="top"><img src="http://www.educationboardresults.gov.bd/images/banner_flag.jpg" width="220" height="41" hspace="0" vspace="0" border="0"></td> 
                     </tr> 
                    </tbody>
                   </table></td> 
@@ -203,7 +203,7 @@
                  <td width="5" align="left" valign="bottom" bgcolor="#F2F2F2" class="footer_text"><img src="images/footer_corner_left.gif" width="5" height="5"></td> 
                  <td width="356" height="70" align="left" valign="middle" bgcolor="#F2F2F2" class="footer_text">©2005-2018 Ministry of Education, All rights reserved.</td> 
                  <td width="150" height="70" align="right" valign="middle" bgcolor="#F2F2F2" class="footer_text">Powered by<img src="images/footer_corner_right.gif" width="5" height="5"></td> 
-                 <td width="110" height="70" align="center" valign="middle" bgcolor="#F2F2F2"><img src="www.educationboardresults.gov.bd/images/tbl_logo.png" width="83" height="44"></td> 
+                 <td width="110" height="70" align="center" valign="middle" bgcolor="#F2F2F2"><img src="http://www.educationboardresults.gov.bd/images/tbl_logo.png" width="83" height="44"></td> 
                  <td width="5" align="left" valign="bottom" bgcolor="#F2F2F2" class="footer_text"><img src="images/footer_corner_right.gif" width="5" height="5"></td> 
                 </tr> 
                </tbody>
