--- a/Results sheet.html
+++ b/Results sheet.html
@@ -186,7 +186,14 @@ div.desc {
 	
 </div>
 	
-
+<div class="news"> 
+          <a href="#news_290718_1" rel="facebox"> <img src="26.jpg" width="140px" height="100px"> </a>
+          SSC (Dakhil) Tofail Uddin Smriti Dakhil Madrasha Morrelgonj, Bagerhat.
+          I spent eight months in the madrasha in the year 2007-2015 (education year). Here are a few small ballet memories.
+          
+          <span class="date"> </span>  
+          </div> 
+          </div>
 	
 	
 	
