--- a/Results sheet.html
+++ b/Results sheet.html
@@ -201,7 +201,7 @@ div.desc {
 
 	
 </div>
-	
+<div class="container">
 <div class="news"> 
           <a href="#news_290718_1" rel="facebox"> <img src="26.jpg" width="180px" height="200px"> </a>
           SSC (Dakhil) Tofail Uddin Smriti Dakhil Madrasha Morrelgonj, Bagerhat.
