--- a/index(01).html
+++ b/index(01).html
@@ -1,3 +1,12 @@
+
+
+
+<style>
+ <body background="https://www.jessoreboard.gov.bd/assets/jb/images/bodybg1.png"> 
+ </style>
+
+
+
 <html lang="en">
  <head> 
   <meta charset="utf-8"> 
