--- a/Results sheet20.html
+++ b/Results sheet20.html
@@ -100,5 +100,22 @@ div.desc {
     <span class="date"> </span> 
    </div> 
   </div> 
+  
+  
+  <div class="container>
+
+          <h1 style="color:red>Some hsc story</h1>
+
+          <div class="news"> 
+
+          <a href="#news_290718_1" rel="facebox"> <img src="26.jpg" width="140px" height="100px"> </a>
+
+          ######
+
+          <span class="date"> </span>  
+
+          </div> 
+
+          </div>
  </body>
 </html>
