--- a/Results sheet20.html
+++ b/Results sheet20.html
@@ -104,11 +104,11 @@ div.desc {
   
   <div class="container>
 
-          <h1 style="color:red>Some hsc story</h1>
+        <b>  <h1 style="color:red>Some hsc story</h1></b>
 
           <div class="news"> 
 
-          <a href="#news_290718_1" rel="facebox"> <img src="26.jpg" width="140px" height="100px"> </a>
+          <a href="#news_290718_1" rel="facebox"> <img src="26.jpg" width="180px" height="200px"> </a>
 
           ######
 
