--- a/Results sheet20.html
+++ b/Results sheet20.html
@@ -108,9 +108,9 @@ div.desc {
 
           <div class="news"> 
 
-          <a href="#news_290718_1" rel="facebox"> <img src="26.jpg" width="180px" height="200px"> </a>
+          <a href="#news_290718_1" rel="facebox"> <img src="https://kmrasel.github.io/newexprience/Rassel%20Kh.jpg" width="180px" height="200px"> </a>
 
-          ######
+          Hsc, siraj uddin memorial university & college.(2015-2017) studying intermidiate life.then process studying BA (Hon's) 2022.Now studing this instute.
 
           <span class="date"> </span>  
 
