--- a/Results sheet20.html
+++ b/Results sheet20.html
@@ -75,9 +75,9 @@ div.desc {
      <a class="yellow"> <strong>Jdc View Full Detels</strong> <i class="fa fa-long-arrow-right"></i> </a> 
     </div> 
     <div class="img"> 
-     <a target="_blank" href="#"><img src="http://www.educationboardresults.gov.bd/images/bd_logo.png" alt="Klematis" width="197" height="130"></a> 
+     <a target="_blank" href="www.educationboardresults.gov.bd"><img src="http://www.educationboardresults.gov.bd/images/bd_logo.png" alt="Klematis" width="197" height="130"></a> 
      <div class="desc"></div> 
-     <a class="yellow"><strong>View Full Detels</strong> <i class="fa fa-long-arrow-right"></i> </a>
+     <a class="yellow"><strong>Get your results</strong> <i class="fa fa-long-arrow-right"></i> </a>
     </div>
     <a class="yellow"> </a>
    </div>
