--- a/index(01).html
+++ b/index(01).html
@@ -76,8 +76,8 @@
        </div></a> 
       <a href="//www.jessoreboard.gov.bd/result" class="service">
        <div class="gra">
-        <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/result.png" alt="">
-        <span>BA (Hon's) Results</span>
+        <img src="http://www.nu.ac.bd/results/img/logo1.png" alt="">
+        <span>University Results</span>
        </div></a> 
       <a href="//student.jessoreboard.gov.bd" class="service">
        <div class="gra">
