--- a/college.html
+++ b/college.html
@@ -90,12 +90,12 @@
       <a href="" class="home-menu">
        <div class="gra">
         <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/date.png" alt="">
-        <span>একাডেমিক ক্যালেন্ডার</span>
+        <span>ফেসবুক পেইজ</span>
        </div></a> 
       <a href="" class="home-menu">
        <div class="gra">
         <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/1348322922_bookcase.png" alt="">
-        <span>পাঠ পরিকল্পনা</span>
+        <span>ওয়েব সাইট</span>
        </div></a> 
       <a href="" class="home-menu">
        <div class="gra">
