--- a/college.html
+++ b/college.html
@@ -87,7 +87,7 @@
         <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/1348319696_chart_bar.png" alt="">
         <span>উপস্থিতি</span>
        </div></a> 
-      <a href="" class="home-menu">
+      <a href="https://m.facebook.com/SMCollegebd/" class="home-menu">
        <div class="gra">
         <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/date.png" alt="">
         <span>ফেসবুক পেইজ</span>
