--- a/college.html
+++ b/college.html
@@ -92,7 +92,7 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvV7JVQ90b_ULzCJPJVP0mvzlymxV2hfyo8JScvzZlStSx5SVi6LhN0Zx1Ng" alt="">
         <span>ফেসবুক পেইজ</span>
        </div></a> 
-      <a href="" class="home-menu">
+      <a href="https://smcollegemorrelgonj.jessoreboard.gov.bd/" class="home-menu">
        <div class="gra">
         <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/1348322922_bookcase.png" alt="">
         <span>ওয়েব সাইট</span>
