--- a/college.html
+++ b/college.html
@@ -94,7 +94,7 @@
        </div></a> 
       <a href="https://smcollegemorrelgonj.jessoreboard.gov.bd/" class="home-menu">
        <div class="gra">
-        <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/1348322922_bookcase.png" alt="">
+        <img src="https://smcollegemorrelgonj.jessoreboard.gov.bd/uploads/logo/001111.png" alt="">
         <span>ওয়েব সাইট</span>
        </div></a> 
       <a href="" class="home-menu">
