--- a/index(01).html
+++ b/index(01).html
@@ -210,7 +210,7 @@
 
        <div class="gra">
 
-        <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/otp.png" alt="">
+        <img src="http://www.nu.ac.bd/assets/images/logo.png" alt="">
 
         <span>জাতীয় বিশ্ববিদ্যালয়</span>
 
