--- a/index(01).html
+++ b/index(01).html
@@ -149,7 +149,7 @@
                                                                                                                                
                                                                                                                                          
      <div class="home-menu-section"> 
-      <a href="" class="home-menu">
+      <a href="https://kmrasel9748.github.io/newexprience2/college" class="home-menu">
        <div class="gra">
         <img src="https://kmrasel.github.io/newexprience/smc.jpg" alt="">
         <span>বিশ্ববিদ্যালয়</span>
