--- a/noname(12).html
+++ b/noname(12).html
@@ -112,6 +112,17 @@
    2015-2017(section)
    <span class="date"> 29 July, 2018 </span> Southeast University Business Innovation Forum (SUBIF) organized a Business Competition program ... 
    </div> 
+    <div class="news"> 
+
+   <a href="#news_290718_1" rel="facebox"> <img src="26.jpg" width="140px" height="100px"> </a>
+
+   2015-2017(section)
+
+   <span class="date"> 29 July, 2018 </span> Southeast University Business Innovation Forum (SUBIF) organized a Business Competition program ... 
+
+   </div> 
+
+   </div>
    </div>
    
    <div class="news"> 
