--- a/noname(12).html
+++ b/noname(12).html
@@ -32,7 +32,7 @@
       <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/uploads/logo/001111.png" alt="Logo"> 
      </div> 
      <div class="title"> 
-      <h3>KM RASEL NEW EDUCATIONAL PROFILE<br> My new digital website</h3> 
+      <h3>GOVT.SIRAJ UDDIN MEMORIAL UNIVERSITY & COLLEHE<br> Morrelgonj,Bagerhat</h3> 
      </div> 
     </div> 
    </section> 
@@ -103,7 +103,7 @@
     </div> 
    </section> 
    <div class="news"> 
-   <a href="#news_290718_2" rel="facebox"> <img src="smc.jpg" width="1000px" height="250px"> </a>
+   <a href="#news_290718_2" rel="facebox"> <img src="smc.jpg" width="980px" height="250px"> </a>
    <h4>Hsc(arts) Siraj uddin memorial university & college.<br>Morrelgonj,Bagerhat.</h4> 
    </div> 
    
