--- a/noname(12).html
+++ b/noname(12).html
@@ -103,7 +103,7 @@
     </div> 
    </section> 
    <div class="news"> 
-   <a href="#news_290718_2" rel="facebox"> <img src="smc.jpg" width="980px" height="250px"> </a>
+   <a href="#news_290718_2" rel="facebox"> <img src="smc.jpg" width="960px" height="250px"> </a>
    <h4>Hsc(arts) Siraj uddin memorial university & college.<br>Morrelgonj,Bagerhat.</h4> 
    </div> 
    
@@ -113,7 +113,7 @@
    <span class="date"> 29 July, 2018 </span> Southeast University Business Innovation Forum (SUBIF) organized a Business Competition program ... 
    </div> 
     <div class="news"> 
-
+<h1 style="color:red">BA (Hon's) Siraj uddin memorial university & college.</h1><br><h3>Morrelgonj.Bagerhat</h3>
    <a href="#news_290718_1" rel="facebox"> <img src="26.jpg" width="140px" height="100px"> </a>
 
    2015-2017(section)
