--- a/noname(12).html
+++ b/noname(12).html
@@ -113,7 +113,7 @@
    <span class="date"> 29 July, 2018 </span> Southeast University Business Innovation Forum (SUBIF) organized a Business Competition program ... 
    </div> 
     <div class="news"> 
-<h1 style="color:red">BA (Hon's) Siraj uddin memorial university & college.</h1><br><h3>Morrelgonj.Bagerhat</h3>
+<h1 style="color:red">BA (Hon's) Siraj uddin memorial university & college.<br>Morrelgonj.Bagerhat</h1>
    <a href="#news_290718_1" rel="facebox"> <img src="26.jpg" width="140px" height="100px"> </a>
 
    2015-2017(section)
