--- a/noname(12).html
+++ b/noname(12).html
@@ -108,10 +108,8 @@
    </div> 
    
    <div class="news"> 
-   <a href="#news_290718_1" rel="facebox"> <img src="26.jpg" width="140px" height="100px"> </a>
-   2015-2017(section)
-   <span class="date"> 29 July, 2018 </span> Southeast University Business Innovation Forum (SUBIF) organized a Business Competition program ... 
-   </div> 
+   <a href="#news_290718_1" rel="facebox"> <img src="26.jpg" width="140px" height="100px"> </a>Rasel khan
+   <span class="date"> 29 July, 2018 </span> <h4 style="color:blue"><I>(2015-2017) এই সময়টায় আমি এই প্রতিষ্ঠানটিতে  পড়ে আসছি আমার ইন্টারমিডিয়েট লাইফ।  সময়টা স্বল্প হলেও অনেক স্মৃতি জমে আছে। অনেক মধুময় স্মৃতি জমে আছে যা ভোলার নয়। নতুন নতুন বন্ধুদের সাথে অনেকটা স্মৃতি রয়েছে যা মনে করিয়ে দেয় আমায় কলেজের সেই প্রথম দিনটার কথা। অনেক সুন্দর স্মৃতি রয়েছে আমার কলেজ জীবনের শুরুর দিকে। চলেছি অজানা পথে স্বপ্ন পুরণের অভিপ্রায়ে করে একটু একটু শিক্ষা গ্রহনের মাধ্যমে। এটা ছিল আমার কলেজ লাইফ যখন ছাত্র-ছাত্রীতে পরিপুর্ণ শ্রেনি কক্ষ। এই অজস্র স্মৃতি যা ভোলার নয়। আমাদের কলেজের বানী,                                       "এসো জ্ঞানের সন্ধানে,                                  ফিরে যাও দেশের সেবায়।"<I><h4> </div> 
     <div class="news"> 
 <h1 style="color:red">BA (Hon's) Siraj uddin memorial university & college.<br>Morrelgonj.Bagerhat</h1>
    <a href="#news_290718_1" rel="facebox"> <img src="26.jpg" width="140px" height="100px"> </a>
