--- a/college.html
+++ b/college.html
@@ -29,7 +29,7 @@
       <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/uploads/logo/001111.png" alt="Logo"> 
      </div> 
      <div class="title"> 
-      <h3>GOVT. SIRAJ UDDIN MEMORIAL COLLEGE <br> EIIN - 115153</h3> 
+      <h3>GOVT. SIRAJ UDDIN MEMORIAL COLLEGE? <br> EIIN - 115153</h3> 
      </div> 
     </div> 
    </section> 
