--- a/noname(12).html
+++ b/noname(12).html
@@ -114,7 +114,7 @@
 <h1 style="color:red">BA (Hon's) Siraj uddin memorial university & college.<br>Morrelgonj.Bagerhat</h1>
    <a href="#news_290718_1" rel="facebox"> <img src="https://kmrasel.github.io/newexprience/Rassel%20Kh.jpg" width="140px" height="100px"> </a>Admitted
 
-  10,October,2018
+  <span>10,October,2018</span><h4>Rasel khan</h4>
 
    
 
