--- a/noname(12).html
+++ b/noname(12).html
@@ -114,7 +114,9 @@
 <h1 style="color:red">BA (Hon's) Siraj uddin memorial university & college.<br>Morrelgonj.Bagerhat</h1>
    <a href="#news_290718_1" rel="facebox"> <img src="https://kmrasel.github.io/newexprience/Rassel%20Kh.jpg" width="140px" height="100px"> </a>Admitted
 
-  <span>10,October,2018</span><h4>Rasel khan</h4>
+  <span>10,October,2017</span><h4 style="color:red"><I>(2017-2022) এই সময়টা আমি বিশ্ববিদ্যালয় শাখায় উচ্চ শিক্ষা গ্রহন করতে চলেছি নিজস্ব কলেজেই। ২০১৭ সাল থেকেই আমার বিশ্ববিদ্যালয় লাইফ শুরু হয়। আমি বাংলা সাহিত্য নিয়ে অধ্যায়ন শুরু করছি । ইন্টারমিডিয়েট লাইফটা খুবই ভালো এবং অনেক আনন্দদায়ক ছিল কিন্তু বিশ্ববিদ্যালয় লাইফটা তার থেকে অনেকটা আলাদা। আমি স্নাতক সম্মান ডিগ্রির লক্ষে অধ্যায়ন করে যাচ্ছি। ইন্টামিডিয়েট লাইফে বন্ধুদের সাথে খুব মজায় কাটিয়ে ছিলাম কিন্তু এই বিশ্ববিদ্যালয় লাইফে আমি যেন সবকিছু নতুন করে চিনছি। সবকিছুই নতুন নতুন হোক সেটা ক্লাস কিংবা ক্লাসের স্টুডেন্টগুলো তবে ইন্টার মিডিয়েট লাইফের মতো নয় সম্পুর্ন আলাদা মনে হচ্ছে। কখনোই  এখনকার বন্ধুগুলো মনের সাথে মিলছে না। হয়তো সময়ের সাথে সবকিছু পাল্টে যায় এটাই বিধির বিধান। এখানে আমাকে (২০১৭-২০২২) সাল পর্যন্ত অধ্যায়ন করতে হবে। আমি সেই লক্ষে এগিয়ে যাচ্ছি লক্ষ পুরনে। 
+
+</I></h4>
 
    
 
