--- a/college.html
+++ b/college.html
@@ -29,7 +29,7 @@
    <section class="banner-section" style="background-image: url(https://smcollegemorrelgonj.jessoreboard.gov.bd/assets/institute/images/banner1.png);"> 
     <div class="overlay"> 
      <div class="logo"> 
-      <img src="//smcollegemorrelgonj.jessoreboard.gov.bd/uploads/logo/001111.png" alt="Logo"> 
+      <img src="smc logo.jpg" alt="Logo"> 
      </div> 
      <div class="title"> 
       <h3>GOVT.SIRAJ UDDIN MEMORIAL UNIVERSITY &amp; COLLEHE<br> Morrelgonj,Bagerhat</h3> 
