--- a/My profile.html
+++ b/My profile.html
@@ -425,8 +425,8 @@ rdquo;</p>
 <h2><strong>Country:Bangladesh</strong></h2>
 </li>
 <li>
-<h2><strong>Email:kmrasel9748@gmail.com</strong></h2>
-<li><strong><h2>Website:kmrasel9748.github.io/newexprience2/</strong></h2>
+<h2><strong>Email:kmrasel9748<br>@gmail.com</strong></h2>
+<li><strong><h2>Website:kmrasel9748.<br>github.io/newexprience2/</strong></h2>
 </ul>
 </div>
 </div>
