--- a/Educational documents.html
+++ b/Educational documents.html
@@ -152,6 +152,7 @@ div.desc {
   <div class="desc"></div> 
   <a class="yellow"><strong>16.View Full Detels</strong> <i class="fa fa-long-arrow-right"></i> </a>
   </div>
+   </div>
   <a class="yellow"> </a>
   </div>
   <marquee>
