--- a/Educational documents.html
+++ b/Educational documents.html
@@ -1,6 +1,6 @@
 <html>
  <head></head>
- <body background="http://bris.lgd.gov.bd/pub/images/full.jpg"> 
+ <body background="https://www.jessoreboard.gov.bd/assets/jb/images/bodybg1.png"> 
   <style>
 
 .container{
@@ -82,17 +82,17 @@ div.desc {
    <div class="img"> 
    <a target="_blank" href="#"><img src="b5.jpg" alt="Klematis" width="197" height="250"></a> 
    <div class="desc"></div> 
-   <a class="yellow"> <strong>5.Intermidiate Registration</strong> <i class="fa fa-long-arrow-right"></i> </a> 
+   <a class="yellow"> <strong>5.Intermidiate Reg</strong> <i class="fa fa-long-arrow-right"></i> </a> 
    </div> 
    <div class="img"> 
    <a target="_blank" href="#"><img src="b6.jpg" alt="Klematis" width="197" height="250"></a> 
    <div class="desc"></div> 
-   <a class="yellow"> <strong>6.Dakhil Registration</strong> <i class="fa fa-long-arrow-right"></i> </a> 
+   <a class="yellow"> <strong>6.Dakhil Reg</strong> <i class="fa fa-long-arrow-right"></i> </a> 
    </div> 
    <div class="img"> 
    <a target="_blank" href="#"><img src="b7.jpg" alt="Klematis" width="197" height="250"></a> 
    <div class="desc"></div> 
-   <a class="yellow"> <strong>7.Jdc Registration</strong> <i class="fa fa-long-arrow-right"></i> </a> 
+   <a class="yellow"> <strong>7.Jdc Reg</strong> <i class="fa fa-long-arrow-right"></i> </a> 
    </div> 
    <div class="img"> 
    <a target="_blank" href="#"><img src="b8.jpg" alt="Klematis" width="197" height="250"></a> 
