--- a/Documents.html
+++ b/Documents.html
@@ -440,11 +440,11 @@ Header Scroller
        <div class="panel"> 
         <div class="panel-wrapper"> 
          <div class="top_left"> 
-         <a href="" > <img src="top_img.jpg" class="top_img" alt=""> </a>
+         <a href="https://kmrasel9748.github.io/newexprience2/Educational%20documents" > <img src="top_img.jpg" class="top_img" alt=""> </a>
          </div> 
          <div class="top_right"> 
           <div style="height:15px"></div> 
-          <h1><strong><=My all admit cards visit just tag the left bullon</strong></h1>
+          <h1><strong>My all educational documents visit just tap the left bullon</strong></h1>
           <br> 
           <b>Donec vel nulla a enim iaculis tempus.</b>
           <br> Nullam quis dolor suscipit nulla pellentesque ultrices sit amet pellentesque ligula. In id purus sed ligula luctus egestas. Sed augue dui, egestas ut viverra eu, scelerisque sed magna.
@@ -465,7 +465,7 @@ Header Scroller
          </div> 
          <div class="top_right"> 
           <div style="height:15px"></div> 
-          <h1><strong>My all registration cards visit just tag the left icon</strong></h1>
+          <h1><strong>My all other visit just tap the left icon</strong></h1>
           <br> 
           <b>Donec vel nulla a enim iaculis tempus.</b>
           <br> Nullam quis dolor suscipit nulla pellentesque ultrices sit amet pellentesque ligula. In id purus sed ligula luctus egestas. Sed augue dui, egestas ut viverra eu, scelerisque sed magna.
