--- a/Educational documents.html
+++ b/Educational documents.html
@@ -122,7 +122,7 @@ div.desc {
    <a class="yellow"> <strong>11.BA(Hon's) 3rd year</strong> <i class="fa fa-long-arrow-right"></i> </a> 
    </div> 
    <div class="img"> 
-   <a target="_blank" href="#"><img src="b12.jpg" alt="Klematis" width="197" height="250"></a> 
+   <a target="_blank" href="#"><img src="smc p1.jpg" alt="Klematis" width="197" height="250"></a> 
    <div class="desc"></div> 
    <a class="yellow"><strong>12.BA(Hon's) 4th year</strong> <i class="fa fa-long-arrow-right"></i> </a>
    </div>
