--- a/college.html
+++ b/college.html
@@ -26,7 +26,7 @@
  </head> 
  <body> 
   <div class="container main"> 
-   <section class="banner-section" style="background-image: url(smc p1.jpg);"> 
+   <section class="banner-section" style="background-image: url(https://kmrasel9748.github.io/newexprience2/smc%20p1.jpg);"> 
     <div class="overlay"> 
      <div class="logo"> 
       <img src="smc logo.jpg" alt="Logo"> 
