--- a/index(01).html
+++ b/index(01).html
@@ -63,7 +63,7 @@
      <li><a href="">শিক্ষাগত রেকর্ড</a></li> 
      <li><a href="">ফলাফল</a></li> 
      <li><a href="#">ফটো</a></li> 
-     <li><a href="">যোগাযোগ</a> </li> 
+     <li><a href="https://kmrasel9748.github.io/newexprience2/Contact%20me">যোগাযোগ</a> </li> 
     </ul> 
    </section> 
    <section class="body-section row"> 
