--- a/index(01).html
+++ b/index(01).html
@@ -183,7 +183,7 @@
 
        
       
-      <a href="" class="home-menu">
+      <a href="https://kmrasel9748.github.io/newexprience2/Computer" class="home-menu">
 
        <div class="gra">
 
