--- a/My profile.html
+++ b/My profile.html
@@ -303,6 +303,9 @@ float : right;
 Creative Commons Attribution 2.5 License</a>. The  photos are from. You"re free to use it for both commercial or personal use. I only ask that you my site in some way. <em>Enjoy :)</em></
 p>
       <h2>Praesent Scelerisque</h2>
+  
+  
+  <img src="#.jpg"width="220"height="220">
       <p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque
 viverra vulputate enim. Aliquam erat volutpat:</p>
       <blockquote>
